# sps30-web-server

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  compress_assets.py  partitions.csv  sdkconfig.defaults
components/sps30/: CMakeLists.txt
components/sps30/include/: sensirion_uart_hal.h
components/sps30/src/: sensirion_uart_hal.c
components/web_server/: CMakeLists.txt
components/web_server/include/: server.h
components/web_server/src/: server.c
components/websocket/: CMakeLists.txt
components/websocket/include/: websocket.h
components/websocket/src/: websocket.c
docs/plans/: 2025-10-15-multi-protocol-sensor.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  sensor_events.c  sensor_events.h
www/: app.js  index.html  style.css
